_chapterhouse/ch-server/deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ch-server
  labels:
    app: ch-server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: ch-server
